# tracks_hs

./: README.md
devops/Gitman/: course-info.yaml  course-remote-info.yaml
devops/Gitman/Gitman/: lesson-info.yaml
pwd_hack/: README.md
python_core/Arithmetic Exam Application/: course-info.yaml  course-remote-info.yaml
python_core/Arithmetic Exam Application/Arithmetic Exam Application/: lesson-info.yaml
python_core/Easy Rider Bus Company/: course-info.yaml  course-remote-info.yaml
python_core/Easy Rider Bus Company/Easy Rider Bus Company/: lesson-info.yaml
python_core/File Manager/: course-info.yaml  course-remote-info.yaml
python_core/File Manager/File Manager/: lesson-info.yaml
python_core/Learning Progress Tracker (Python)/: course-info.yaml  course-remote-info.yaml
python_core/Learning Progress Tracker (Python)/Learning Progress Tracker (Python)/: lesson-info.yaml
python_core/Password Hacker (Python)/: course-info.yaml  course-remote-info.yaml
python_core/Password Hacker (Python)/Password Hacker (Python)/: lesson-info.yaml
python_core/Web Scraper/: course-info.yaml  course-remote-info.yaml
python_core/Web Scraper/Web Scraper/: lesson-info.yaml
python_core/bill_splitter/: pyproject.toml
python_core/bill_splitter/src/: main.py  stage1.py  stage2.py  stage3.py  stage4.py
python_core/income_calc/: README.md  pyproject.toml
python_core/income_calc/income_calc/: data.py  stage_1.py  stage_2.py  stage_3.py  utils.py
python_core/pwd_hack/: pyproject.toml
python_core/pwd_hack/pwd_hack/expt/: expt1.py  expt2.py
(+147 files in other folders)
