[tool.poetry]
name = "income-calc"
version = "0.1.0"
description = ""
authors = ["silverscorpio <rajat.newtoneinstein@gmail.com>"]
readme = "README.md"
packages = [{include = "income_calc"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
