[tool.poetry]
name = "pwd-hack"
version = "0.1.0"
description = ""
authors = ["silverscorpio <rajat.newtoneinstein@gmail.com>"]
readme = "README.md"
packages = [{include = "pwd_hack"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
